[build-system]
requires = ["python>=3.11"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "my-streamlit-app"
version = "0.1.0"
description = "Streamlit app dependencies"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
crewai = "^0.30.11"
langchain_google_genai = "^1.0.4"
embedchain = "*"  # Replace with specific version if needed
chromadb = "*"    # Replace with specific version if needed

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
