[build-system]
requires = ["python=3.10"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "my-streamlit-app"
version = "1.28.2"
description = "Streamlit app dependencies"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
streamlit = "^1.28.2"
crewai = "^0.28.8"
langchain_google_genai = "^1.0.2"
embedchain = "0.1.102"  # Replace with specific version if needed
chromadb = "0.4.24"    # Replace with specific version if needed

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
